<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.mvvmdaggerroomdb.model.UserModel" />
    </data>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_5sdp"
        tools:context="com.mvvmdaggerroomdb.fragment.ShowDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_20sdp">

            <TextView
                android:id="@+id/name"
                style="@style/MatchWrap.TextViewBold"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/name_"
                android:textColor="@color/black"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                style="@style/MatchWrap.TextViewBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{user.name}"
                android:textColor="@color/black"
                android:textStyle="italic"
                app:layout_constraintEnd_toStartOf="@+id/ivEdit"
                app:layout_constraintStart_toEndOf="@id/name"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/name" />

            <TextView
                android:id="@+id/address"
                style="@style/MatchWrap.TextViewBold"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/Address_"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />

            <TextView
                android:id="@+id/tvAddress"
                style="@style/MatchWrap.TextViewBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@{user.address}"
                android:textColor="@color/black"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@id/address"
                app:layout_constraintTop_toBottomOf="@+id/tvName"
                tools:text="@string/Address" />

            <TextView
                android:id="@+id/country"
                style="@style/MatchWrap.TextViewBold"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/country_"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address" />

            <TextView
                android:id="@+id/tvCountry"
                style="@style/MatchWrap.TextViewBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@{user.country}"
                android:textColor="@color/black"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@id/country"
                app:layout_constraintTop_toBottomOf="@+id/tvAddress"
                tools:text="@string/country" />

            <ImageView
                android:id="@+id/ivEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_edit"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@+id/ivDelete"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_delete"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</layout>