<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="androidx.fragment.app.Fragment" />

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.mvvmdaggerroomdb.viewmodels.AddDetailViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.mvvmdaggerroomdb.fragment.AddDetailFragment">

        <include
            android:id="@+id/appbar"
            layout="@layout/appbar"
            android:visibility="gone" />

        <EditText
            android:id="@+id/editTextName"
            style="@style/Edit_Text"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:text="@={viewModel.userModel.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar" />

        <EditText
            android:id="@+id/editTextAddress"
            style="@style/Edit_Text"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:hint="@string/Address"
            android:inputType="text"
            android:text="@={viewModel.userModel.address}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextName" />

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:onClick="@{viewModel::onSubmit}"
            android:text="@string/submit"
            app:layout_constraintTop_toBottomOf="@id/editTextAddress" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>